# kikai1

./: .gitignore  README.md  color.py  coordination.py  main.py  mnist.py  model_weights.pth  pyproject.toml
01/: closet.json  tenki2_1.py
02/: closet.json  closet.py  rules.json  tenki_color1.py  tenki_color2.py  tenki_color3.py  tenki_color4.py
03/: model.py
kikai1/01/: wandb_sample.py
kikai1/01/wandb/run-20251119_184613-8abwgaro/: run-8abwgaro.wandb
kikai1/01/wandb/run-20251119_184613-8abwgaro/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
kikai1/02/: closet.json  closet.py  tenki_color5.py  unet.py  unet_gakusyu.py
sample/: tenki1.py  tenki2.py
